refactor: 검색 정렬 추가